# AVLTreeCLI

./: README.md  main.py  pyproject.toml
avltreecli/: avl_tree.py  cli.py
docs/avltreecli/: avl_tree.html  cli.html  index.html
tests/: __init__.py  test_avl_tree.py  test_cli.py
