[project]
name = "avltreecli"
version = "0.1.1"
description = "Learn and test AVL trees with a rich CLI grid-based visualizer."
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich (>=14.0.0,<15.0.0)"
]

[project.urls]
Homepage = "https://github.com/viniciusccosta/AVLTreeCLI"
Repository = "https://github.com/viniciusccosta/AVLTreeCLI"

[project.scripts]
avltreecli = "avltreecli.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"