[project]
name = "avltreecli"
version = "0.1.2"
description = "Learn and test AVL trees with a rich CLI grid-based visualizer."
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry.group.docs.dependencies]
pdoc3 = "^0.11.6"


[project.urls]
Homepage = "https://github.com/viniciusccosta/AVLTreeCLI"
Repository = "https://github.com/viniciusccosta/AVLTreeCLI"
Documentation = "https://viniciusccosta.github.io/AVLTreeCLI"
"Bug Tracker" = "https://github.com/viniciusccosta/AVLTreeCLI/issues"

[project.scripts]
avltreecli = "avltreecli.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"